codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_resume_with_personality_change.snap
---
source: core/tests/suite/model_visible_layout.rs
expression: "format_labeled_requests_snapshot(\"First post-resume turn where resumed config model differs from rollout and personality changes.\",\n&[(\"Last Request Before Resume\", &initial_request),\n(\"First Request After Resume\", &resumed_request),])"
---
Scenario: First post-resume turn where resumed config model differs from rollout and personality changes.

## Window 1
-- request 1 (turn; Last Request Before Resume) --
00:message/developer[2]:
    [01] Skills: List once at session start; read always-applicable and task-relevant skills before work
    [02] <PERMISSIONS_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    seed resume history

## Window 2 (after request 1: settings changed (model))
-- request 2 (turn; First Request After Resume) --
00:message/developer[2]:
    [01] Skills: List once at session start; read always-applicable and task-relevant skills before work
    [02] <PERMISSIONS_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    seed resume history
03:message/assistant:
    recorded before resume
04:message/developer:
    <MODEL_SWITCH>
05:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
06:message/user:
    <ENVIRONMENT_CONTEXT>
07:message/user:
    resume and change personality
